--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@polkadot/extension-dapp": "^0.37.2",
     "@polkadot/ui-keyring": "^0.66.2",
     "@polkadot/ui-settings": "^0.67.1",
+    "copy-to-clipboard": "^3.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "web-vitals": "^1.0.1"
