--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@polkadot/api": "^3.9.4-0",
-    "@polkadot/api-contract": "^3.9.4-0",
-    "@polkadot/extension-dapp": "^0.37.2",
-    "@polkadot/ui-keyring": "^0.66.2",
-    "@polkadot/ui-settings": "^0.67.1",
+    "@polkadot/api": "^4.13.1",
+    "@polkadot/api-contract": "^4.13.1",
+    "@polkadot/extension-dapp": "^0.38.3",
+    "@polkadot/ui-keyring": "^0.79.1",
+    "@polkadot/ui-settings": "^0.79.1",
     "copy-to-clipboard": "^3.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
